--- a/server/client/index.html
+++ b/server/client/index.html
@@ -9,9 +9,12 @@
      <link rel="stylesheet" href="my.css">
 </head>
 <body>
+     <button onclick="GetTable()"></button>
+
      <!-- #region Content -->
      <div class="" id="contentBox"></div>
      <!-- #endregion Content -->
+
 
 
      <script src="my.js"></script>
